force-app/main/default/objects/Contact/fields/Home_page__c.field-meta.xml
<CustomField>
    <fullName>Home_page__c</fullName>
    <label>Página web</label>
    <type>Url</type>
</CustomField>