force-app/main/default/objects/Contact/fields/LOPD__c.field-meta.xml
<CustomField>
    <fullName>LOPD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para migrar el dato LOPD__c de la cuenta.</description>
    <label>LOPD</label>
    <type>Checkbox</type>
</CustomField>