force-app/main/default/objects/Contact/fields/N_Contacto__c.field-meta.xml
<CustomField>
    <fullName>N_Contacto__c</fullName>
    <label>Nº Contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>