force-app/main/default/objects/Contact/fields/Otra_direcci_n_de_correo_electr_nico__c.field-meta.xml
<CustomField>
    <fullName>Otra_direcci_n_de_correo_electr_nico__c</fullName>
    <label>Otra dirección de correo electrónico</label>
    <type>Email</type>
</CustomField>