force-app/main/default/objects/Contact/fields/Permitir_duplicado__c.field-meta.xml
<CustomField>
    <fullName>Permitir_duplicado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para permitir actualizar los contactos desde la app NewSales aunque existan duplicados.</description>
    <label>Permitir duplicado</label>
    <type>Checkbox</type>
</CustomField>