force-app/main/default/objects/Contact/fields/recordval__rv2AsstPhoneStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2AsstPhoneStatusCode__c</fullName>
    <label>RV Asst Phone Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>