force-app/main/default/objects/Contact/fields/recordval__rv2BusinessFaxStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2BusinessFaxStatusCode__c</fullName>
    <label>RV Business Fax Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>