force-app/main/default/objects/Contact/fields/recordval__rv2MailingAddressStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2MailingAddressStatusCode__c</fullName>
    <label>RV Mailing Address Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>