force-app/main/default/objects/Contact/validationRules/Valida_telefono.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_telefono</fullName>
    <active>false</active>
    <description>Valida que es número de teléfono tenga un máximo de 9 números y que el primero esté entre 6 y 9</description>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;[6-9]{1}\\d{8}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Comprueba el formato de número de teléfono ( 9 dígitos , el primero debe ser entre 6 y 9)</errorMessage>
</ValidationRule>